--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body {
 
 .btn {
   text-transform: uppercase;
-  background: transparent;
-  color: var(--clr-black);
+  /* background: transparent; */
+  color: var(--white);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
@@ -56,6 +56,10 @@ body {
   border: 2px solid var(--clr-black);
   cursor: pointer;
   border-radius: 0.5rem;
+}
+
+h2 {
+    margin: 1rem auto;
 }
 
 /*
@@ -78,16 +82,23 @@ Modal
     padding: 3rem 2rem;
     border-radius: 30px;
     text-align: left;
+    height: 22rem;
+    width: 23rem;
 }
+
+
 .modal-btn {
     margin-top: 2rem;
     background: var(--clr-primary);
     color: var(--white);
+    padding: 1rem 8rem;
+    border-radius: 3rem;
 }
 .modal-btn:hover {
     color: var(--white);
-    background: transparent;
+    /* background: transparent; */
 }
+
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -106,7 +117,8 @@ Modal
     display: flex;
     justify-content: space-between;
     align-items: left;
-    margin: 2rem;
+    margin-top: 2rem;
+    margin-left: auto;
 }
 
 .numbers p {
@@ -123,3 +135,22 @@ Modal
     cursor: pointer;
     background-color: var(--light-grey);
 }
+
+/* OPEN/CLOSE MODAL */
+.open-modal {
+    visibility: visible;
+    z-index: 10;
+  }
+  .modal-container {
+    background: var(--clr-white);
+    border-radius: var(--radius);
+    width: 90vw;
+    height: 30vh;
+    max-width: var(--fixed-width);
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: relative;
+  }
+  
+  
