--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 Fonts
 ===============
 */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+@import url("https://fonts.google.com/specimen/Overpass");
 
 /*
 =============== 
@@ -82,10 +82,23 @@ Modal
     padding: 3rem 2rem;
     border-radius: 30px;
     text-align: left;
-    height: 22rem;
+    height: 23rem;
     width: 23rem;
 }
 
+img {
+    font-size: small;
+}
+
+.logo {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: var(--medium-grey);
+    justify-content: center;
+    align-items: center;
+}
 
 .modal-btn {
     margin-top: 2rem;
@@ -97,20 +110,6 @@ Modal
 .modal-btn:hover {
     color: var(--white);
     /* background: transparent; */
-}
-
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(73, 166, 233, 0.5);
-    display: grid;
-    place-items: center;
-    transition: var(--transition);
-    visibility: hidden;
-    z-index: -10;
 }
 
 .numbers {
@@ -135,22 +134,51 @@ Modal
     cursor: pointer;
     background-color: var(--light-grey);
 }
+  
+/* Submitted state */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--very-dark-blue);
+    display: grid;
+    place-items: center;
+    transition: var(--transition);
+    visibility: hidden;
+    z-index: -10;
+}
 
-/* OPEN/CLOSE MODAL */
 .open-modal {
     visibility: visible;
     z-index: 10;
-  }
-  .modal-container {
-    background: var(--clr-white);
-    border-radius: var(--radius);
-    width: 90vw;
-    height: 30vh;
-    max-width: var(--fixed-width);
+}
+.modal-container {
+    background: var(--dark-blue);
+    padding: 3rem 2rem;
+    border-radius: 30px;
+    width: 23rem;
+    height: 23rem;
     text-align: center;
     display: grid;
-    place-items: center;
-    position: relative;
-  }
-  
-  
+    justify-content: center;
+}
+
+.modal-container img {
+    display: block;
+    margin: 0 auto;
+}
+
+.selected {
+    display: block;
+    color: var(--clr-primary);
+    background: var(--medium-grey);
+    border-radius: 30px;
+    padding: 0.2rem 1.5rem;
+    margin: 1rem auto;
+}
+
+.modal-container h1 {
+    margin: 0.5rem auto;
+}
