--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img {
     font-size: small;
 }
 
-.logo {
+.banner {
     display: flex;
     width: 30px;
     height: 30px;
@@ -109,7 +109,7 @@ img {
 }
 .modal-btn:hover {
     color: var(--white);
-    /* background: transparent; */
+    background: transparent;
 }
 
 .numbers {
